add fonts, colors, and modify scripts - disable at-rule-empty-line-before rule - rm .zip file after unzip

--- a/due-processed/sass/abstracts/variables/_colors.scss
+++ b/due-processed/sass/abstracts/variables/_colors.scss
@@ -1,20 +1,29 @@
-$color__background-body: #fff;
-$color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
+$__INTERNAL_USE_ONLY_COLOR_RED__: #ad0000;
+$__INTERNAL_USE_ONLY_COLOR_WHITE__: #fff;
+$__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__: #f5f5f5;
+$__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__: #ccc;
+$__INTERNAL_USE_ONLY_COLOR_DARK_GREY__: #5f5f5f;
+$__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__: #151515;
+$__INTERNAL_USE_ONLY_COLOR_SECONDARY_BLUE__: #e6f4f9;
+$__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__: #007db3;
 
-$color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: #4169e1; //royalblue
-$color__link-visited: #800080; //purple
-$color__link-hover: #191970; //midnightblue
-$color__text-main: #404040;
+$color__background-body: $__INTERNAL_USE_ONLY_COLOR_WHITE__;
+$color__background-screen: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
+$color__background-hr: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
+$color__background-button: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+$color__background-pre: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
+$color__background-ins: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
 
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
+$color__text-button: $__INTERNAL_USE_ONLY_COLOR_WHITE__;
+$color__text-screen: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+$color__text-input: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+$color__text-input-focus: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+$color__link: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__;
+$color__link-visited: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__;
+$color__link-hover: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__;
+$color__text-main: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+
+$color__border-input: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
+$color__border-input-focus: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
+$color__border-abbr: $__INTERNAL_USE_ONLY_COLOR_DARK_GREY__;
+$color__border: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
