--- a/due-processed/sass/base/elements/_links.scss
+++ b/due-processed/sass/base/elements/_links.scss
@@ -1,8 +1,13 @@
 a {
 	color: $color__link;
+	text-decoration: none;
 
 	&:visited {
 		color: $color__link-visited;
+	}
+
+	&:hover {
+		text-decoration: underline;
 	}
 
 	&:hover,
