--- a/due-processed/sass/base/typography/_typography.scss
+++ b/due-processed/sass/base/typography/_typography.scss
@@ -1,13 +1,14 @@
 body,
-button,
 input,
 select,
 optgroup,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
-	font-size: 1rem;
-	line-height: $font__line-height-body;
+	@include font-body($size: medium);
+}
+
+button {
+	@include font-label();
 }
 
 @import "headings";
