add base layouts and styles (#3)
add base layouts for header, footer, search, home, and overall site

--- a/due-processed/sass/abstracts/variables/_structure.scss
+++ b/due-processed/sass/abstracts/variables/_structure.scss
@@ -1,2 +1,8 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+
+$spacing__x-small: 10px;
+$spacing__small: 20px;
+$spacing__medium: 30px;
+$spacing__large: 40px;
+$spacing__x-large: 50px;
