--- a/due-processed/sass/abstracts/mixins/_mixins.scss
+++ b/due-processed/sass/abstracts/mixins/_mixins.scss
@@ -7,5 +7,12 @@
 
 // Column width with margin
 @mixin column-width($numberColumns: 3) {
-	width: map-get($columns, $numberColumns) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
+	width: map-get($columns, $numberColumns) -
+		(($columns__margin * ($numberColumns - 1)) / $numberColumns);
+}
+
+@mixin primary-page-width {
+	width: calc(100% - (2 * 60px));
+	max-width: 1440px;
+	margin: 0 auto;
 }
