--- a/due-processed/sass/abstracts/variables/_colors.scss
+++ b/due-processed/sass/abstracts/variables/_colors.scss
@@ -8,6 +8,7 @@ $__INTERNAL_USE_ONLY_COLOR_SECONDARY_BLUE__: #e6f4f9;
 $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__: #007db3;
 
 $color__background-body: $__INTERNAL_USE_ONLY_COLOR_WHITE__;
+$color__background-secondary: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
 $color__background-screen: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
 $color__background-hr: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
 $color__background-button: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
