--- a/due-processed/sass/components/navigation/_navigation.scss
+++ b/due-processed/sass/components/navigation/_navigation.scss
@@ -22,7 +22,6 @@
 			}
 
 			li {
-
 				&:hover > ul,
 				&.focus > ul {
 					display: block;
@@ -50,7 +49,9 @@
 	}
 
 	li {
+		@include font-label();
 		position: relative;
+		margin-right: $spacing__x-large;
 
 		&:hover > a,
 		&.focus > a {
@@ -76,7 +77,6 @@
 }
 
 @media screen and (min-width: 37.5em) {
-
 	.menu-toggle {
 		display: none;
 	}
@@ -89,7 +89,6 @@
 .comment-navigation,
 .posts-navigation,
 .post-navigation {
-
 	.site-main & {
 		margin: 0 0 1.5em;
 	}
