initial search results page layout/css updates

--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -2,9 +2,17 @@
 --------------------------------------------- */
 @import "navigation/navigation";
 
+/* content components
+--------------------------------------------- */
+@import "content/meta";
+
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
+
+/* search page
+--------------------------------------------- */
+@import "content/search";
 
 /* Comments
 --------------------------------------------- */
