created home.php file
- created new content templates, updated search.php
- created homepage featured area styles
- updated `.page-title` styles

--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -6,6 +6,10 @@
 --------------------------------------------- */
 @import "content/meta";
 
+/* content components
+--------------------------------------------- */
+@import "content/featured-article";
+
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
