--- a/due-processed/sass/components/content/_posts-and-pages.scss
+++ b/due-processed/sass/components/content/_posts-and-pages.scss
@@ -16,7 +16,9 @@
 }
 
 .page-title {
-	font-size: 28px; // create reusable class for headers
+	margin: $spacing__medium 0 $spacing__small;
+	text-align: center;
+	@include font-header($size: large);
 }
 
 .page-content,
