add css grid to single post template for footnotes (#39)
* add grid layout to articles for footnotes rail
- add header font styles
- add single post style sheet
- remove comments and sidebar from single post template

* add generated files

--- a/due-processed/sass/base/typography/_headings.scss
+++ b/due-processed/sass/base/typography/_headings.scss
@@ -6,3 +6,24 @@ h5,
 h6 {
 	clear: both;
 }
+
+h1 {
+	@include font-header($size: large);
+}
+
+h2 {
+	@include font-header($size: small);
+}
+
+h3 {
+	@include font-body($size: large);
+}
+
+h4 {
+	@include font-body($size: medium);
+}
+
+h5,
+h6 {
+	@include font-body($size: small);
+}
