--- a/due-processed/sass/abstracts/variables/_typography.scss
+++ b/due-processed/sass/abstracts/variables/_typography.scss
@@ -1,7 +1,12 @@
 $__INTERNAL_USE_ONLY_FONTS__: (
-	"IBM Plex Serif Light": "./fonts/IBMPlexSerif-Light.woff2",
-	"IBM Plex Serif Medium": "./fonts/IBMPlexSerif-Medium.woff2",
+	"Lora Regular": "./fonts/Lora-Regular.woff2",
+	"Lora Medium": "./fonts/Lora-Medium.woff2",
 	"Work Sans Light": "./fonts/WorkSans-Light.woff2",
+);
+
+$__INTERNAL_USE_ONLY_ITALIC_FONTS__: (
+	"Lora Regular": "./fonts/Lora-Italic.woff2",
+	"Lora Medium": "./fonts/Lora-MediumItalic.woff2",
 );
 
 $__INTERNAL_USE_ONLY_SERIF_BACKUPS__: georgia, "Times New Roman", times, serif;
@@ -17,22 +22,33 @@ $__INTERNAL_USE_ONLY_SANS_BACKUPS__: "Helvetica Neue", helvetica, arial,
 	}
 }
 
+@each $font-name, $font-src in $__INTERNAL_USE_ONLY_ITALIC_FONTS__ {
+	@font-face {
+		font-family: "#{$font-name}";
+		src: url(#{$font-src}) format("woff");
+		font-style: italic;
+		font-display: swap;
+	}
+}
+
 @mixin font-header($size: small, $type: normal) {
 	$size-map: (
 		small: 2.2rem,
 		large: 2.8rem,
 	);
 	$type-map: (
-		normal: "IBM Plex Serif Medium",
+		normal: "Lora Medium",
 	);
 	$back-up: $__INTERNAL_USE_ONLY_SERIF_BACKUPS__;
 
 	@if ($size = small) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 36px;
 	} @else if ($size = large) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 30px;
 	} @else {
 		@error "#{$size} not supported.";
 	}
@@ -45,26 +61,32 @@ $__INTERNAL_USE_ONLY_SANS_BACKUPS__: "Helvetica Neue", helvetica, arial,
 		large: 2rem,
 	);
 	$type-map: (
-		normal: "IBM Plex Serif Light",
-		heavy: "IBM Plex Serif Medium",
+		normal: "Lora Regular",
+		heavy: "Lora Medium",
 	);
 	$back-up: $__INTERNAL_USE_ONLY_SERIF_BACKUPS__;
 
 	@if ($size = small and $type = heavy) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 20px;
 	} @else if ($size = small and $type = normal) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 20px;
 	} @else if ($size = medium and $type = heavy) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		font-style: italic;
+		line-height: 24px;
 	} @else if ($size = medium and $type = normal) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 24px;
 	} @else if ($size = large and $type = normal) {
 		font-size: map-get($size-map, $size);
 		font-family: map-get($type-map, $type), $back-up;
+		line-height: 30px;
 	} @else {
 		@error "#{$size} and #{$type} combination not supported.";
 	}
