--- a/wp-content/themes/due-processed/woocommerce.css
+++ b/wp-content/themes/due-processed/woocommerce.css
@@ -4,15 +4,15 @@ Theme Name: Due_Processed
 WooCommerce styles override
 */
 @font-face {
-	font-family: "IBM Plex Serif Light";
-	src: url(./fonts/IBMPlexSerif-Light.woff2) format("woff");
+	font-family: "Lora Regular";
+	src: url(./fonts/Lora-Regular.woff2) format("woff");
 	font-style: normal;
 	font-display: swap;
 }
 
 @font-face {
-	font-family: "IBM Plex Serif Medium";
-	src: url(./fonts/IBMPlexSerif-Medium.woff2) format("woff");
+	font-family: "Lora Medium";
+	src: url(./fonts/Lora-Medium.woff2) format("woff");
 	font-style: normal;
 	font-display: swap;
 }
@@ -21,6 +21,20 @@ WooCommerce styles override
 	font-family: "Work Sans Light";
 	src: url(./fonts/WorkSans-Light.woff2) format("woff");
 	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Lora Regular";
+	src: url(./fonts/Lora-Italic.woff2) format("woff");
+	font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Lora Medium";
+	src: url(./fonts/Lora-MediumItalic.woff2) format("woff");
+	font-style: italic;
 	font-display: swap;
 }
 
