--- a/due-processed/sass/base/_base.scss
+++ b/due-processed/sass/base/_base.scss
@@ -10,6 +10,8 @@
 @import "elements/lists";
 @import "elements/media";
 @import "elements/tables";
+@import "elements/headers";
+
 
 /* Links
 --------------------------------------------- */
