--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -604,6 +604,11 @@ table {
 	width: 100%;
 }
 
+h1,
+h2 {
+	font-size: 2.8rem;
+}
+
 /* Links
 --------------------------------------------- */
 a {
@@ -793,6 +798,27 @@ textarea {
 	margin: 0 auto;
 	padding-top: 40px;
 	padding-bottom: 40px;
+}
+
+/*--------------------------------------------------------------
+# Pages
+--------------------------------------------------------------*/
+.page-id-7 .site-main {
+	display: flex;
+	justify-content: center;
+	line-height: 30px;
+	margin: 0;
+	width: 100vw;
+}
+
+.page-id-7 h1,
+.page-id-7 h2 {
+	font-size: 2.8rem;
+	text-align: center;
+}
+
+.page-id-7 .entry-content {
+	max-width: 636px;
 }
 
 /*--------------------------------------------------------------
